[project]
name = "trustguard-treasury"
version = "1.0.0"
description = "TrustGuard Treasury - Enterprise Threshold Signature Service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "coincurve>=20.0.0",
    "pydantic>=2.9.0",
    "cachetools>=5.5.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "numpy>=2.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
