[package]
name = "king_halo"
version = "0.1.0"
edition = "2024"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.4.0" }
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget" }
rand = "0.8.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch."https://github.com/privacy-scaling-explorations/poseidon-gadget"]
halo2_poseidon = { git = "https://github.com/teddav/poseidon-gadget", branch = "halo-v0.4" }
