[package]
name = "solwanna-server"
version = "1.0.0"
edition = "2021"

[dependencies]
sol-ctf-framework = { git = "https://github.com/otter-sec/sol-ctf-framework.git" }
solana-sdk = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
threadpool = "1.8.1"
solwanna = { version = "1.0.0", path = "../program" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
borsh = "1.5.7"
borsh-derive = "1.5.7"