[package]
name = "vip-lounge"
version = "1.0.0"
edition = "2021"
description = "VIP Lounge - A members-only vault program (CTF Challenge)"
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
solana-program = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

