[package]
name = "vip-lounge-server"
version = "1.0.0"
edition = "2021"
description = "Challenge server for VIP Lounge CTF"
license = "MIT"

[[bin]]
name = "vip-lounge-server"
path = "src/main.rs"

[dependencies]
sol-ctf-framework = { path = "../../sol-ctf-framework" }
solana-sdk = "2.2.2"
solana-program = "=2.2.1"
solana-program-test = "2.2.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
vip-lounge = { path = "../program", features = ["no-entrypoint"] }

